[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
PySimpleGUIWeb = "^0.39.0"
nltk = "^3.6.5"
numpy = "^1.20.3"
pandas = "^1.3.4"
spacy = "^3.2.3"
torch = "^1.11.0"
transformers = "^4.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"